--- a/src/index.css
+++ b/src/index.css
@@ -2,16 +2,22 @@
 @tailwind components;
 @tailwind utilities;
 
+
+/* Light Mode */
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  @apply bg-gradient-to-b from-bgLightStart to-bgLightEnd text-textPrimary;
+  @apply font-sans;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* Dark Mode */
+.dark body {
+  @apply bg-gradient-to-b from-bgDarkStart to-bgDarkEnd text-textPrimaryDark;
+}
+
+/* Glassified Effect */
+.glass-card {
+  @apply bg-white bg-opacity-30 backdrop-filter backdrop-blur-md rounded-xl p-6 shadow-lg;
+}
+.dark .glass-card {
+  @apply bg-gray-800 bg-opacity-50;
 }
